# icanact-saga-choreography

./: .gitignore  Cargo.toml  README.md
docs/: architecture.md  integration_guide.md
examples/deribit/: main.rs
examples/deribit/actors/: deribit_ws.rs  mod.rs  order_coordinator.rs  order_monitor.rs  order_placer.rs  rate_limiter.rs  risk_manager.rs  ta_signal.rs
examples/deribit/saga/: mod.rs  types.rs
spec/: PLAN.md
src/: binding.rs  bus.rs  context.rs  dedupe.rs  durability.rs  errors.rs  events.rs  helpers.rs  idempotency.rs  journal.rs  lib.rs  observer.rs  reply_registry.rs  resolver.rs  state.rs  state_ext.rs  stats.rs  support.rs  testkit.rs  traits.rs  workflow_contract.rs
tests/: async_participant_integration.rs  durability_integration.rs  durability_lmdb_integration.rs  order_lifecycle_e2e.rs  saga_testkit_smoke.rs
