[package]
name = "icanact-saga-choreography"
version = "0.1.0"
edition = "2021"
description = "Choreography-based SAGA pattern for distributed transactions using icanact-core actors"
license = "MIT"
authors = ["Greg"]

[features]
default = []
diagnostics = []
test-harness = []

[dependencies]
# Core dependencies
icanact-core = { git = "ssh://git@github.com/moofone/actor-framework-core.git", branch = "main", features = ["perf-counters", "loom-tests", "async-actors", "lmdb-durability", "remote", "relay", "ws"] }
serde = { version = "1", features = ["derive"] }
bincode = "1.3"
thiserror = "1.0"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "time", "macros", "sync"] }
tracing = "0.1"

# Optional observability
tracing-subscriber = { version = "0.3", optional = true }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "time", "macros", "sync", "test-util"] }

[patch."ssh://git@github.com/moofone/actor-framework-core.git"]
icanact-core = { path = "../icanact-core" }
