[package]
name = "icanact-saga-choreography"
version = "0.1.0"
edition = "2021"
description = "Choreography-based SAGA pattern for distributed transactions using icanact-core actors"
license = "MIT"
authors = ["Greg"]

[features]
default = []
diagnostics = []
test-harness = []
lmdb = ["dep:heed"]

[dependencies]
# Core dependencies
icanact-core = { path = "../actor-framework-core", features = ["async-actors"] }
rkyv = { version = "0.8", features = ["std", "bytecheck"] }
thiserror = "1.0"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "time", "macros", "sync"] }
tracing = "0.1"
heed = { version = "0.20", optional = true }

# Optional observability
tracing-subscriber = { version = "0.3", optional = true }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "time", "macros", "sync", "test-util"] }
