[package]
name = "icanact-saga-choreography"
version = "0.1.0"
edition = "2021"
description = "Choreography-based SAGA pattern for distributed transactions using icanact-core actors"
license = "MIT"
authors = ["Greg"]

[features]
default = []
diagnostics = []
test-harness = ["icanact-core/test-support", "dep:tracing-subscriber"]
test-support = ["test-harness"]
lmdb = ["dep:heed"]

[dependencies]
# Core dependencies
icanact-core = { git = "ssh://git@github.com/moofone/actor-framework-core.git", rev = "ec5d25e3285c4f306749860bfdd57f1e7264b25a", features = ["async-actors"] }
rkyv = { version = "0.8", features = ["std", "bytecheck"] }
thiserror = "1.0"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "time", "macros", "sync"] }
tracing = "0.1"
heed = { version = "0.20", optional = true }

# Optional observability
tracing-subscriber = { version = "0.3", optional = true }

[dev-dependencies]
icanact-core = { git = "ssh://git@github.com/moofone/actor-framework-core.git", rev = "ec5d25e3285c4f306749860bfdd57f1e7264b25a", features = ["async-actors", "test-support"] }
tempfile = "3"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "time", "macros", "sync", "test-util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
